src/test/ui/deprecation/suggestion.stderr
error: use of deprecated function `bar::deprecated`: replaced by `replacement`
  --> $DIR/suggestion.rs:38:10
   |
LL |     bar::deprecated();
   |          ^^^^^^^^^^ help: replace the use of the deprecated function: `replacement`
   |
note: the lint level is defined here
  --> $DIR/suggestion.rs:5:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated associated function `Foo::deprecated`: replaced by `replacement`
  --> $DIR/suggestion.rs:36:9
   |
LL |     foo.deprecated();
   |         ^^^^^^^^^^ help: replace the use of the deprecated associated function: `replacement`

error: aborting due to 2 previous errors

